<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/profileFragment"
            android:enabled="true"
            android:icon="@drawable/profile_stroke_icon"
            android:title="@string/profile" />

        <item
            android:id="@+id/listsFragment"
            android:enabled="true"
            android:icon="@drawable/lists_icon"
            android:title="@string/lists" />

        <item
            android:id="@+id/topicsFragment"
            android:enabled="true"
            android:icon="@drawable/topics_stroke_icon"
            android:title="@string/topics" />

        <item
            android:id="@+id/bookmarksFragment"
            android:enabled="true"
            android:icon="@drawable/bookmarks_icon"
            android:title="@string/bookmarks" />

        <item
            android:id="@+id/momentsFragment"
            android:enabled="true"
            android:icon="@drawable/ic_moments_icon"
            android:title="@string/moments" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settingsPrivacyFragment"
            android:enabled="true"
            android:title="@string/settingsPrivacy" />

        <item
            android:id="@+id/helpCenterFragment"
            android:enabled="true"
            android:title="@string/helpCenter" />
    </group>
</menu>